Fixed spacing and alignment of images on small devices

--- a/main.css
+++ b/main.css
@@ -54,7 +54,6 @@ header p {
 }
 
 section1 .row img {
-  display: flex;
   display: block;
   margin: 0 auto;
   width: 100%;
